# icp-oisy-guardian

./: .gitignore  BUSINESS_PRIORITIZATION_MATRIX.md  Cargo.toml  DREAM-CYCLE.md  GUARDIAN_FILE_STRUCTURE.md  GUARDIAN_LAUNCH.md  HEARTBEAT.md  IDEA_13_AGENT_PRODUCTS_PLAN.md  IDEA_5_MERCH_PLAN.md  PHASE_1_ROADMAP.md  README.md  SETUP.md  SOUL.md  USER.md  agent-status.json  agents_state.json  dfx.json  mission_control_dashboard.md  projects.json  schedule.json  skill-guard-SKILL.md  tasks.json
.openclaw/: workspace-state.json
creator/: CONTENT_CALENDAR.md  CONTENT_STRATEGY.md
guardian-dev/: DEV_LOG.md  DEV_PLAN.md  OISY_GUARDIAN_SPEC.md
guardian-icp/: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  canister_ids.json  dfx.json  project-files.txt
guardian-icp/frontend/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
guardian-icp/scripts/: deploy-frontend-testnet.sh
guardian-icp/src/: guardian_engine.did  lib.rs
guardian-icp/src/guardian_engine/: Cargo.toml
guardian-icp/src/guardian_engine/src/: alert_queue.rs  alerts.rs  canisters.rs  delivery.rs  detector.rs  fetcher.rs  icrc.rs  integration_tests.rs  lib.rs
memory/: 2026-02-28-dream-cycle-test.md  cost-optimization.md  morning-brief.md  projects.md
mission-control/: BUILD_PLAN.md  README.md  SPEC.md
mission-control/app/: package-lock.json  package.json
orchestrator/: KILL_SWITCH.md
prospector/: PROSPECTOR_RULES.md  PROSPECT_PIPELINE.md
prospector/templates/: TIER1_QUICK_WIN.md
scripts/: dream-cycle.sh
src/: guardian.did  lib.rs
(+65 files in other folders)
